# rust-axum-blog-project

./: .env.example  .gitignore  Cargo.toml  README.md  THIRD_PARTY_LICENSE  build.rs
microservices/embedding_vllm/: embed_server.py  pyproject.toml
migrations/: 20250926080513_users.down.sql  20250926080513_users.up.sql  20250928042613_users_verified.down.sql  20250928042613_users_verified.up.sql  20250930121848_post.down.sql  20250930121848_post.up.sql  20250930130701_comment.down.sql  20250930130701_comment.up.sql  20250930130701_review.down.sql  20250930130701_review.up.sql  20251007155848_hybrid-search.down.sql  20251007155848_hybrid-search.up.sql  20251009144817_tag.down.sql  20251009144817_tag.up.sql  20251019023645_newsletter_emails.down.sql  20251019023645_newsletter_emails.up.sql  20251119072914_post-extension.down.sql  20251119072914_post-extension.up.sql
proto/: embed.proto
src/: config.rs  db.rs  dtos.rs  error.rs  grpc.rs  handler.rs  http.rs  main.rs  middleware.rs  models.rs  redisdb.rs  routes.rs  tracing_config.rs
src/db/: comment.rs  newsletter.rs  post.rs  scheduler.rs  user.rs
src/handler/: auth.rs  comment.rs  newsletter.rs  post.rs  review.rs  search.rs  users.rs
src/mail/: mails.rs  sendmail.rs
src/mail/templates/: Verification-newemail.html
src/utils/: password.rs  token.rs
